iac/cloudformation/cfn-infra.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Amazon EKS Sample VPC - Private and Public subnets'

Parameters:

  VpcBlock:
    Type: String
    Default: 10.0.0.0/16
    Description: The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range.

  VpcSecondaryBlock:
    Type: String
    Default: 100.255.0.0/16
    Description: The secondary CIDR range for Pods.

  PublicSubnet01Block:
    Type: String
    Default: 10.0.0.0/20
    Description: CidrBlock for public subnet 01 within the VPC

  PublicSubnet02Block:
    Type: String
    Default: 10.0.16.0/20
    Description: CidrBlock for public subnet 02 within the VPC

  PublicSubnet03Block:
    Type: String
    Default: 10.0.32.0/20
    Description: CidrBlock for public subnet 03 within the VPC

  PrivateSubnet01Block:
    Type: String
    Default: 10.0.128.0/20
    Description: CidrBlock for private subnet 01 within the VPC

  PrivateSubnet02Block:
    Type: String
    Default: 10.0.144.0/20
    Description: CidrBlock for private subnet 02 within the VPC

  PrivateSubnet03Block:
    Type: String
    Default: 10.0.160.0/20
    Description: CidrBlock for private subnet 03 within the VPC

  PodSubnet01Block:
    Type: String
    Default: 100.255.0.0/18
    Description: CidrBlock for pod subnet 01 within the VPC

  PodSubnet02Block:
    Type: String
    Default: 100.255.64.0/18
    Description: CidrBlock for pod subnet 02 within the VPC

  PodSubnet03Block:
    Type: String
    Default: 100.255.128.0/18
    Description: CidrBlock for pod subnet 03 within the VPC

  NamePrefix:
    Type: String
    Default: eks
    Description: Resource name prefix for all

  C9EC2InstanceType:
    Description: EC2 instance type on which IDE runs, at least 8 GB of memory (eg m5.large) if test the kind scenario
    Type: String
    Default: c5.xlarge
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m5.large
      - m5.xlarge
      - c5.large
      - c5.xlarge

  C9AutoHibernateTimeout:
    Description: How many minutes idle before shutting down the IDE. Options, 30min, 1hr, 4hr, 1day, 1week, Never (0)
    Type: Number
    Default: 0
    AllowedValues:
      - 30
      - 60
      - 240
      - 1440
      - 10080
      - 0

  C9DeployToPublicSubnet:
    Description: Whether to deploy Cloud9 IDE in public subnet
    Type: String
    Default: "TRUE"
    AllowedValues:
      - "TRUE"
      - "FALSE"

  C9CreateSSMRole:
    Description: Whether to create the SSM role, if not the first time to run this templdate, please choose FALSE
    Type: String
    Default: "FALSE"
    AllowedValues:
      - "TRUE"
      - "FALSE"

  C9Image:
    Description: The identifier for the Amazon Machine Image (AMI) that's used to create the EC2 instance
    Type: String
    Default: "amazonlinux-2-x86_64"
    AllowedValues:
    - "amazonlinux-2-x86_64"
    - "amazonlinux-1-x86_64"
    - "ubuntu-18.04-x86_64"

  CreateEKSAdminRole:
    Description: Whether to create the EKS Admin role, if not the first time to run this templdate, please choose FALSE
    Type: String
    Default: "TRUE"
    AllowedValues:
      - "TRUE"
      - "FALSE"

Conditions:
  UseC9PublicSubnet: !Equals [!Ref C9DeployToPublicSubnet, "TRUE"]
  CreateC9SSMRole: !Equals
    - "TRUE"
    - !Ref C9CreateSSMRole
  CreateEKSAdminRole: !Equals
    - "TRUE"
    - !Ref CreateEKSAdminRole

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Worker Network Configuration"
        Parameters:
          - NamePrefix
          - VpcBlock
          - VpcSecondaryBlock
          - PublicSubnet01Block
          - PublicSubnet02Block
          - PublicSubnet03Block
          - PrivateSubnet01Block
          - PrivateSubnet02Block
          - PrivateSubnet03Block
          - PodSubnet01Block
          - PodSubnet02Block
          - PodSubnet03Block          
          - C9EC2InstanceType
          - C9Image
          - C9AutoHibernateTimeout
          - C9DeployToPublicSubnet
          - C9CreateSSMRole          
          - CreateEKSAdminRole

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:  !Ref VpcBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-VPC'

  VpcSecondaryCidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref VpcSecondaryBlock

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"

  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: public-rtb
      - Key: Network
        Value: Public

  PrivateRouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: private-rtb-01
      - Key: Network
        Value: Private01

  PrivateRouteTable02:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: private-rtb-02
      - Key: Network
        Value: Private02

  PrivateRouteTable03:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: private-rtb-03
      - Key: Network
        Value: Private03

  PodRouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: pod-rtb-01
      - Key: Network
        Value: Pod01

  PodRouteTable02:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: pod-rtb-02
      - Key: Network
        Value: Pod02

  PodRouteTable03:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: pod-rtb-03
      - Key: Network
        Value: Pod03

  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRoute01:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway01
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway01

  PrivateRoute02:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway02
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway02

  PrivateRoute03:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway03
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable03
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway03

  NatGatewayEIP1:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP2:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP3:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGateway01:
    DependsOn:
    - NatGatewayEIP1
    - PublicSubnet01
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP1.AllocationId'
      SubnetId: !Ref PublicSubnet01
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ1'

  NatGateway02:
    DependsOn:
    - NatGatewayEIP2
    - PublicSubnet02
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP2.AllocationId'
      SubnetId: !Ref PublicSubnet02
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ2'

  NatGateway03:
    DependsOn:
    - NatGatewayEIP3
    - PublicSubnet03
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP3.AllocationId'
      SubnetId: !Ref PublicSubnet03
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ3'

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 01
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet01Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet01"
      - Key: kubernetes.io/role/elb
        Value: 1
      - Key: for-use-with-amazon-emr-managed-policies
        Value: true

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 02
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet02Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet02"
      - Key: kubernetes.io/role/elb
        Value: 1
      - Key: for-use-with-amazon-emr-managed-policies
        Value: true

  PublicSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 03
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet03Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet03"
      - Key: kubernetes.io/role/elb
        Value: 1
      - Key: for-use-with-amazon-emr-managed-policies
        Value: true

  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 01
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet01Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet01"  
      - Key: kubernetes.io/role/internal-elb
        Value: 1
      - Key: karpenter.sh/discovery # Tags subnets for Karpenter auto-discovery
        Value: true    
      - Key: for-use-with-amazon-emr-managed-policies
        Value: true

  PrivateSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 02
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet02Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet02"
      - Key: kubernetes.io/role/internal-elb
        Value: 1
      - Key: karpenter.sh/discovery # Tags subnets for Karpenter auto-discovery
        Value: true        
      - Key: for-use-with-amazon-emr-managed-policies
        Value: true

  PrivateSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 03
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet03Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet03"
      - Key: kubernetes.io/role/internal-elb
        Value: 1
      - Key: karpenter.sh/discovery # Tags subnets for Karpenter auto-discovery
        Value: true        
      - Key: for-use-with-amazon-emr-managed-policies
        Value: true

  PodSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Pod Subnet 01
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PodSubnet01Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PodSubnet01"

  PodSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Pod Subnet 02
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PodSubnet02Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PodSubnet02"

  PodSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Pod Subnet 03
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PodSubnet03Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PodSubnet03"

  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet03
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable01

  PrivateSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet02
      RouteTableId: !Ref PrivateRouteTable02

  PrivateSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet03
      RouteTableId: !Ref PrivateRouteTable03

  PodSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PodSubnet01
      RouteTableId: !Ref PodRouteTable01

  PodSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PodSubnet02
      RouteTableId: !Ref PodRouteTable02

  PodSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PodSubnet03
      RouteTableId: !Ref PodRouteTable03

  ControlPlaneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster communication with worker nodes
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-control-plane"

  ControlPlaneSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref ControlPlaneSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId

  SharedNodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all internal communications
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcBlock
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-shared-node"

  SharedNodeSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref SharedNodeSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt SharedNodeSecurityGroup.GroupId

  ExternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow external ssh for public access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          CidrIp: 0.0.0.0/0          
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0                  
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-external"

  ExternalSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref ExternalSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt ExternalSecurityGroup.GroupId

  WorkspaceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EMR Studio Workspace
      VpcId: !Ref VPC # should not have any ingress rules       
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-emr-studio-workspace"
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  EndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EMR Studio Cluster/endpoint
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcBlock          
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-emr-studio-endpoint"
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  EndpointSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref EndpointSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt EndpointSecurityGroup.GroupId

  Workspace2EndpointIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref EndpointSecurityGroup
        IpProtocol: "tcp"
        FromPort: 18888
        ToPort: 18888
        SourceSecurityGroupId: !GetAtt WorkspaceSecurityGroup.GroupId

  ControlPlane2EndpointIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref EndpointSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId

  SharedNode2EndpointIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref EndpointSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt SharedNodeSecurityGroup.GroupId

  SharedNode2ControlPlaneIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref SharedNodeSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId

  External2EndpointIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref EndpointSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt ExternalSecurityGroup.GroupId

  Endpoint2ControlPlaneIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref ControlPlaneSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt EndpointSecurityGroup.GroupId

  Endpoint2SharedNodeIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref SharedNodeSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt EndpointSecurityGroup.GroupId

  Endpoint2ExternalIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref ExternalSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt EndpointSecurityGroup.GroupId

  # KMS EKS encryption key
  EKSKey:
    Type: AWS::KMS::Key
    Properties:
      # MultiRegion: true
      KeyPolicy:
        Version: 2012-10-17
        Id: key-eks
        Statement:
          - Sid: Enable IAM User Permissions
            Effect: Allow
            Principal:
              AWS: !Join
                - ''
                - - 'arn:aws:iam::'
                  - !Ref 'AWS::AccountId'
                  - ':root'
            Action: 'kms:*'
            Resource: '*'
  EKSAlias:
    Type: AWS::KMS::Alias
    Properties:
      AliasName: alias/eks
      TargetKeyId:
        Ref: EKSKey


  # Cloud9
  C9SSMAccessRole:
    Condition: CreateC9SSMRole
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - cloud9.amazonaws.com
                - ec2.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Description: "Service linked role for AWS Cloud9"
      Path: "/service-role/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AWSCloud9SSMInstanceProfile
        - arn:aws:iam::aws:policy/AdministratorAccess
        - arn:aws:iam::aws:policy/IAMFullAccess
      RoleName: "AWSCloud9SSMAccessRole"

  C9SSMInstanceProfile:
    Condition: CreateC9SSMRole
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      InstanceProfileName: AWSCloud9SSMInstanceProfile
      Path: "/cloud9/"
      Roles:
        - Ref: C9SSMAccessRole

  C9IDE:
    Type: "AWS::Cloud9::EnvironmentEC2"        
    Properties:
      Name: !Sub "${NamePrefix}-cloud9-ide"
      ImageId: !Ref C9Image
      Description: "Cloud9 IDE"
      AutomaticStopTimeMinutes: !Ref "C9AutoHibernateTimeout"
      SubnetId:
        !If [UseC9PublicSubnet, !Ref PublicSubnet01, !Ref PrivateSubnet01]
      InstanceType: !Ref "C9EC2InstanceType"
      ConnectionType: !If [UseC9PublicSubnet, CONNECT_SSH, CONNECT_SSM]


  EKSAdminRole:
    Condition: CreateEKSAdminRole
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: EKSAdminRole
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action: '*'
                Resource: '*'
  EKSAdminInstanceProfile:
    Condition: CreateEKSAdminRole
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref EKSAdminRole

Outputs:
  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
    
  ControlPlaneSecurityGroup:
    Description: Security group for the cluster control plane communication with worker nodes
    Value: !Join [ ",", [ !Ref ControlPlaneSecurityGroup ] ]

  SharedNodeSecurityGroup:
    Description: Security group for the Shared Nodes
    Value: !Join [ ",", [ !Ref SharedNodeSecurityGroup ] ]

  ExternalSecurityGroup:
    Description: Security group for the External Access
    Value: !Join [ ",", [ !Ref ExternalSecurityGroup ] ]

  EKSKeyArn:
    Description: 'EKS Key ARN.'
    Value: !GetAtt 'EKSKey.Arn'
    Export:
      Name: 'EKS-KeyArn'

  Cloud9URL:
    Description: Cloud9 Environment
    Value:
      Fn::Join:
        - ""
        - - !Sub https://${AWS::Region}.console.aws.amazon.com/cloud9/ide/
          - !Ref "C9IDE"

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet01

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet02

  PublicSubnet3:
    Description: A reference to the public subnet in the 3rd Availability Zone
    Value: !Ref PublicSubnet03

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet01

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet02

  PrivateSubnet3:
    Description: A reference to the private subnet in the 3rd Availability Zone
    Value: !Ref PrivateSubnet03

  PodSubnet1:
    Description: A reference to the pod subnet in the 1st Availability Zone
    Value: !Ref PodSubnet01

  PodSubnet2:
    Description: A reference to the pod subnet in the 2nd Availability Zone
    Value: !Ref PodSubnet02

  PodSubnet3:
    Description: A reference to the pod subnet in the 3rd Availability Zone
    Value: !Ref PodSubnet03

  EKSAdminRole:
    Description: Management role for EKS
    Value: !Ref EKSAdminRole
